# cmpe202-01-spring2026-team-project-evently

./: .env.example  .gitignore  README.md  docker-compose.yml  justfile  project_journal.md  scrum_report.md
.github/workflows/: python.yml  test_suite.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
backend/backend/: api.py  app_config.py  clap.py  cli.py  main.py  seed.py  seed_event_images.json
backend/backend/db/: __init__.py  client.py  dependency.py
backend/backend/models/: attendance.py  event.py  event_favorite.py  ticket.py  user.py
backend/backend/routes/: auth.py  contact.py  events.py  geocode.py  users.py
backend/backend/services/: calendar_sync.py
backend/backend/services/notifications/: arq.py  email.py  worker.py
backend/src/backend/db/: __init__.py  client.py
backend/tests/: conftest.py  test_api_lifespan.py  test_auth_api.py  test_cli.py  test_contact_api.py  test_event_notifications_api.py  test_events_admin_api.py  test_events_api.py  test_events_api_extended.py  test_events_api_regressions.py  test_events_google_calendar_api.py  test_geocode_api.py  test_google_api_error_handling.py  test_hello_world.py  test_notification_reminders.py  test_notification_services.py  test_seed.py  test_users_api.py  test_users_api_extended.py
backend/tests/models/: test_attendance.py  test_event.py  test_event_favorite.py  test_ticket.py  test_user.py  test_validations.py  test_validations_extended.py
diagrams/: EventlyComponentDiagram.puml  EventlyDeploymentDiagram.puml
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.mts  vitest.config.ts
frontend/app/: discover-page-client.test.tsx  discover-page-client.tsx  layout.tsx  page.tsx
frontend/components/: auth-nav.test.tsx  auth-nav.tsx  auth-required-action.test.tsx  auth-required-action.tsx
frontend/lib/: api-base.test.ts  api-base.ts  api.test.ts  api.ts  auth-redirect.test.ts  auth-redirect.ts  auth.ts  calendar-links.test.ts  calendar-links.ts  create-event-payload.test.ts  create-event-payload.ts  datetime.test.ts  datetime.ts  path-with-next.test.ts  path-with-next.ts  types.ts  (+3 more)
infrastructure/: .gitignore  README.md  api-stack.ts  cdk.json  config.ts  evently-stack.ts  output.ts  package-lock.json  package.json  s3.ts  sns.ts  tsconfig.json  types.ts  vpc.ts
project_journal/: project_journal.md
scripts/: generate_seed_event_images.mjs
(+25 files in other folders)
