[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [ ]

[project.scripts]
backend = "backend.main:cli"

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[project.urls]
Repository = "https://github.com/gopinathsjsu/cmpe202-01-spring2026-team-project-evently"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 88
indent-width = 4

exclude = [
    ".git",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "build",
]

target-version = "py313"

[tool.mypy]
files = ["backend", "tests"]
strict = true

[tool.ruff.lint]
select = [
    "E",  
    "W",  
    "F",  
    "I",  
    "B",  
    "C4", 
    "T", 
    "UP", 
    "SIM",
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "lf"
