[project]
name = "backend"
version = "0.1.0"
description = "Evently backend"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
 "fastapi>=0.115.0",
 "email-validator>=2.3.0",
 "pydantic>=2.12.5",
 "pymongo>=4.16.0",
 "uvicorn>=0.34.0",
]

[project.scripts]
backend = "backend.main:cli"

[project.urls]
Repository = "https://github.com/gopinathsjsu/cmpe202-01-spring2026-team-project-evently"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
indent-width = 4

exclude = [
    ".git",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "build",
]

target-version = "py313"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
files = ["backend", "tests"]
strict = true

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.ruff.lint]
select = [
    "E",  
    "W",  
    "F",  
    "I",  
    "B",  
    "C4", 
    "T", 
    "UP", 
    "SIM",
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "lf"
